--- a/app/src/main/res/layout/model.xml
+++ b/app/src/main/res/layout/model.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Top記事"
+            android:text="TOP"
             android:id="@+id/topTag"
             android:padding="10dp"
             android:textColor="@color/colorAccent"
